<resources>
    <string name="app_name">Jalame</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JALAME</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="map_fragment">Mapa</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingrese_sus_nombres">Ingrese sus nombres</string>
    <string name="ingrese_sus_apellidos">Ingrese sus apellidos</string>
    <string name="ingrese_su_celular">Ingrese su celular</string>
    <string name="ingrese_su_password">Ingrese su contraseña</string>
    <string name="confirme_su_password">Confirme su contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="no_tienes_una_cuenta"><u>¿No tienes una cuenta?</u></string>
    <string name="poliza_soat">Poliza SOAT</string>
    <string name="marca_del_auto">Marca del vehículo</string>
    <string name="modelo_del_auto">Modelo del vehículo</string>
    <string name="color_del_auto">Color del vehículo</string>
    <string name="cantidad_de_asientos">Número de asientos</string>
    <string name="estado">Estado</string>
    <string name="guardar_registro">Guardar</string>
    <string name="cancelar_registro">Cancelar</string>
    <string name="tengo_auto_propio">Tengo auto propio</string>
    <string name="google_api_key">AIzaSyAneF72iiRGQaGj56zwojtdChoAvR7fU6I</string>
    <string name="servicios_fragment">servicio</string>
    <string name="location_fragment">Location</string>
    <string name="service_date">Fecha del servicio</string>
    <string name="service_origin_description">Origen</string>
    <string name="services_destiny_description">Destino</string>
    <string name="driver_calification">Calificación al conductor</string>
    <string name="service_state">Estado del servicio</string>
    <string name="marca_y_modelo_del_auto">Marca y modelo del vehículo</string>
    <string name="placa_del_auto">Matrícula del vehículo</string>
    <string name="car_distance">Distancia del vehículo</string>

    <string name="BASE_URL">http://services.tarrillobarba.com.pe:6789/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_su_dni">Ingrese su DNI</string>
    <string name="driver_name">Nombre del conductor</string>
    <string name="calification">Calificación</string>
    <string name="fecha_del_servicio">Fecha del servicio</string>
    <string name="nombre_del_conductor">Nombre del Conductor</string>
    <string name="monto">Monto:</string>
    <string name="forma_de_pago">Forma de Pago:</string>
    <string name="solicitar_servicio">Solicitar servicio</string>
    <string name="cancelar_pedido_solicitud">Cancelar</string>
    <string name="confirmar_solicitud">Aceptar</string>
    <string name="matricula">Matricula</string>
</resources>
