<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activity.Dialog.ConfirmRequestDialogActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_del_conductor"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:id="@+id/lblDriverName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:text="@string/matricula"
        android:id="@+id/lblMatricula"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/marca_y_modelo_del_auto"
        android:id="@+id/lblCardBrandModel"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/calification"
        android:id="@+id/lblCalificacion"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/cancelar_pedido_solicitud"
            android:id="@+id/btnCancel"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/confirmar_solicitud"
            android:id="@+id/btnAcept"/>

    </LinearLayout>

</LinearLayout>