<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ServiceDetailFragment">

    /*
    private int codServicio;
    private int codConductor;
    private int codUsuario;
    private int codVehiculo;
    private int codTarifa;
    private int codFormaPago;
    private String fecRegistro;
    private String inicioServ;
    private String finServ;
    private String origenDes;
    private String origenLat;
    private String origenLon;
    private String destinoDes;
    private String destinoLat;
    private String destinoLon;
    private int calificacionUsuario;
    private int calificacionConductor;
    private int calificacionVehiculo;
    private String commtUsua;
    private String commtCond;
    private String estadoServ;
    private double importe;
    private String estadoR;
    private String tsupdate;

    //Referencias
    private String usuario;
    private String conductor;
    private String vehiculo;
    private String formaPago;
    */


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:src="@drawable/icon_profle"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblDriverName"
            android:textStyle="bold"
            android:text="@string/nombre_del_conductor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/icon_calendar_clock"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_del_servicio"
                android:id="@+id/lblDate"/>
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_origin_place"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_origin_description"
            android:id="@+id/lblOrigin"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/icon_destiny_place"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/services_destiny_description"
                android:id="@+id/lblDestiny"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/icon_black_star"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calification"
                android:id="@+id/lblCalificacion"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                android:text="@string/monto"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monto"
                android:id="@+id/lblImporte"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                android:text="@string/forma_de_pago"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forma_de_pago"
                android:id="@+id/lblFormaPago"/>
        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>